@@ -1,4 +1,4 @@
-# fmedia v0.36
+# fmedia v0.37
 
 
 # codepage for non-Unicode text: win1251 | win1252
